# clinical-copilot

./: .gitignore  INSTALL.md  README.md  copilot-tab.sh  install.sh  note_critique_portal.html  pyproject.toml  requirements.txt  service_watchdog.py  simple_monitor.py  start-copilot.sh  start-services.sh  stop-copilot.sh
clinical_copilot/: __init__.py  config.py  main.py
clinical_copilot/analysis/: __init__.py  clinical_analyzer.py  ollama_client.py
clinical_copilot/capture/: __init__.py  privacy_filter.py  screenpipe.py
clinical_copilot/memory/: __init__.py  db.py  patient_memory.py  pattern_memory.py  preference_memory.py  rag_store.py
clinical_copilot/monitor/: __init__.py  screen_monitor.py
clinical_copilot/tools/: __init__.py  calculators.py  clinical_insight.py  drug_checker.py  web_search.py
clinical_copilot/ui/: __init__.py  alerts.py  floating_tab.py  indicator.py  menubar_app.py  tab_launcher.py  terminal.py
clinical_copilot/utils/: __init__.py  health_check.py
clinical_insight_backend/: .env.example  load_cases.py  requirements.txt
clinical_insight_backend/app/: __init__.py  config.py  main.py
clinical_insight_backend/app/api/: chat.py  rag.py  reasoning.py
clinical_insight_backend/app/prompts/: clinical_insight.py  clinical_reasoning_framework.py
clinical_insight_backend/app/schemas/: clinical.py
clinical_insight_backend/app/services/: case_rag.py  clinical_reasoning.py  conversation.py  diagnostic_reasoning.py
